--- a/info.html
+++ b/info.html
@@ -480,7 +480,7 @@
 
     <div id="info-section1" class="info-section1">
         <video width="320" height="240" controls>
-            <source src="exen.com.pdf" type="video/mp4">
+            <source src="" type="video/mp4">
         </video>
         <p>Malhar chota pack... bada dhamaka... khuch ata toh nahi h bass koi bole collage na ane ko to direct nahi, or ager koi plane ko canncel bole to jaan per ata h BKL phele apne 75% attendence laga!!!!!</p>
         <audio controls>
